hphp/hack/test/decl/mutable_as_hint1.php
<?hh // strict

class A {}

// ERROR
<<__Rx>>
function f(Mutable<A> $a): void {
}
